test/programs/invalid/modifiers/volatile.java
  protected class A {
    public volatile int x;
  }

